Added new overlays for 1280x800 res - updated code to reflect new overlay

--- a/html/cam1_full_s.html
+++ b/html/cam1_full_s.html
@@ -8,9 +8,10 @@
 
 <div class="container">
   
-  <div id="main_full"><img src="images/Overlay_Single_960x720_s.png" width="1024px" height="768px"  /> </div>
+  <div id="main_full"><img src="images/overlay_1280x800_s.png" width="1280px" height="800px" /> </div>
   
-  <iframe class="iframe_full" frameborder="0" width="960" height="720" src="http://192.168.11.3:8081/?action=stream" scrolling="no" allowtransparency="true"></iframe>
+  <iframe class="iframe_cam" frameborder="0" width="960" height="720" src="http://localhost:8081/?action=stream" 
+scrolling="no" allowtransparency="true"></iframe>
   
   </div>
 </body>
