--- a/html/cam1_full_e.html
+++ b/html/cam1_full_e.html
@@ -8,9 +8,12 @@
 
 <div class="container">
   
-  <div id="main_full"><img src="Images/Overlay_Single_960x720.png" width="1024px" height="768px"  /> </div>
+  <div id="main_full"><img src="Images/overlay_1280x800_e.png" 
+width="1280px" 
+height="800px"  /> </div>
   
-  <iframe class="iframe_full" frameborder="0" width="960" height="720" src="http://192.168.11.3:8081/?action=stream" scrolling="no" allowtransparency="true"></iframe>
+  <iframe class="iframe_cam" frameborder="0" width="960" height="720" 
+src="http://localhost:8081/?action=stream" scrolling="no" allowtransparency="true"></iframe>
     
 
   </div>
